<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mono_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eunseon1003@gmail.com">eunseon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- <build_depend>ecl_linear_algebra</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>dslam_common</build_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>ecl_linear_algebra</exec_depend>
  <exec_depend>ecl_time</exec_depend>
  <exec_depend>sophus</exec_depend>
  <exec_depend>dslam_common</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
